--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,3 @@
-.header__logo, html,
-body {
-  font-family: "Josefin Sans", sans-serif;
-  font-weight: 700;
-}
-
-.text {
-  font-family: "Josefin Sans", sans-serif;
-  font-weight: 600;
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -17,6 +6,8 @@ body {
 
 html,
 body {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400;
   min-width: 320px;
   min-height: 100%;
   font-size: 18px;
@@ -114,8 +105,18 @@ li {
   -webkit-text-fill-color: transparent;
   font-size: 40px;
   line-height: 47px;
+  font-weight: 700;
   white-space: nowrap;
   padding-right: 30px;
+}
+@media (max-width: 800px) {
+  .header__logo {
+    font-size: 30px;
+  }
+}
+.header__logo span {
+  background: #B53071;
+  -webkit-background-clip: text;
 }
 .header__menu-wrapper {
   display: flex;
@@ -185,7 +186,7 @@ li {
   transition: all 0.3 ease;
 }
 .header__nav-link:hover {
-  opacity: 0.7;
+  color: #B53071;
 }
 @media (max-width: 968px) {
   .header__nav-link {
@@ -238,12 +239,15 @@ li {
   transition: all 0.3 ease;
   white-space: nowrap;
 }
+.btn-started:hover {
+  background: #921f57;
+  opacity: 0.8;
+}
 
 .main-page {
-  padding: 85px 0 0;
+  padding: 85px 0 20px;
   position: relative;
-  background: url("../img/header/header-bg1.png"), url("../img/header/header-bg2.png");
-  background-position: center;
+  background: url("../img/header/header-bg1.png") no-repeat center;
   background-size: cover;
 }
 .main-page::before {
@@ -285,6 +289,7 @@ li {
   font-size: 58px;
   line-height: 117%;
   color: #171147;
+  font-weight: 700;
 }
 @media (max-width: 1000px) {
   .main-page__title {
@@ -316,6 +321,11 @@ li {
   height: 122px;
   transform: rotate(15deg);
   z-index: -1;
+}
+@media (max-width: 1000px) {
+  .main-page__title--white:before {
+    left: -17px;
+  }
 }
 .main-page__title--red {
   color: #D5356F;
@@ -350,6 +360,7 @@ li {
   font-size: 18px;
   line-height: 133%;
   color: #2E299A;
+  font-weight: 600;
   position: relative;
   padding: 8px 0 8px 50px;
   white-space: nowrap;
@@ -397,8 +408,7 @@ li {
 }
 @media (max-width: 600px) {
   .main-page__img {
-    opacity: 0.3;
-    left: 0;
+    display: none;
   }
 }
 
@@ -428,9 +438,7 @@ li {
 
 .about {
   padding: 35px 0 175px;
-  background: url("../img/about/about-bg.png"), url("../img/about/about-bg2.png");
-  background-repeat: no-repeat;
-  background-position: center;
+  background: url("../img/about/about-bg.png") no-repeat center;
   background-size: cover;
 }
 @media (max-width: 1000px) {
@@ -524,6 +532,7 @@ li {
   font-size: 50px;
   line-height: 108%;
   color: #171147;
+  font-weight: 700;
 }
 .modify-title__red {
   color: #842774;
