--- a/style/style.scss
+++ b/style/style.scss
@@ -1,18 +1,3 @@
-%j-sBold {
-  font-family: 'Josefin Sans' , sans-serif;
-  font-weight: 700;
-}
-%j-sReg {
-  font-family: 'Josefin Sans' , sans-serif;
-  font-weight: 400;
-}
-%j-sSbold {
-  font-family: 'Josefin Sans' , sans-serif;
-  font-weight: 600;
-}
-
-
-/////////////////////////////////////////////////////////////////////////
 * {
   box-sizing: border-box;
   margin: 0;
@@ -21,7 +6,8 @@
 
 html,
 body{
-  @extend %j-sBold;
+  font-family: 'Josefin Sans' , sans-serif;
+  font-weight: 400;
   min-width: 320px;
   min-height: 100%;
   font-size: 18px;
@@ -126,10 +112,18 @@ li {
     -webkit-text-fill-color: transparent;
     font-size: 40px;
     line-height: 47px;
-    @extend %j-sBold;
+    font-weight: 700;
 
     white-space: nowrap;
     padding-right: 30px;
+    
+    @media (max-width: 800px) {
+      font-size: 30px;
+    }
+    span{
+    background: #B53071;
+    -webkit-background-clip: text;
+    }
   }
 
   &__menu-wrapper {
@@ -202,7 +196,7 @@ li {
 
     transition: all 0.3 ease;
     &:hover{
-      opacity: 0.7;
+      color: #B53071;
     }
     @media (max-width: 968px) {
       color: #FFECFB;
@@ -245,8 +239,6 @@ li {
   }
 }
 
-
-
 .btn-started {
   padding: 13px 34px 13px 35px;
 
@@ -261,14 +253,18 @@ li {
   border-radius: 25px;
   transition: all 0.3 ease;
   white-space: nowrap;
+
+  &:hover{
+    background: #921f57;
+    opacity: 0.8;
+  }
 }
 //////////////////////////////////////////////////
 .main-page {
-  padding: 85px 0 0 ;
+  padding: 85px 0 20px ;
 
   position: relative;
-  background: url('../img/header/header-bg1.png'), url('../img/header/header-bg2.png') ;
-  background-position: center;
+  background: url('../img/header/header-bg1.png') no-repeat center ;
   background-size: cover;
   &::before {
     content: '';
@@ -310,6 +306,7 @@ li {
     font-size: 58px;
     line-height: 117%;
     color: #171147;
+    font-weight: 700;
     @media (max-width: 1000px) {
       font-size: 48px;
       margin-bottom: 45px;
@@ -340,6 +337,9 @@ li {
         
         transform: rotate(15deg);
         z-index: -1;
+        @media (max-width: 1000px) {
+          left: -17px;
+        }
       }
     }
     &--red{
@@ -378,6 +378,7 @@ li {
     font-size: 18px;
     line-height: 133%;
     color: #2E299A;
+    font-weight: 600;
 
     position: relative;
     padding: 8px 0 8px 50px ;
@@ -419,14 +420,12 @@ li {
       opacity: 0.5;
     }
     @media (max-width: 600px) {
-      opacity: 0.3;
-      left: 0;
+      display: none;
     }
   }
 }
 
 .text {
-  @extend %j-sSbold;
     font-size: 18px;
     line-height: 133%;
     color: #332B5C;
@@ -452,10 +451,8 @@ li {
 .about {
   padding: 35px 0 175px;
 
-  background: url('../img/about/about-bg.png'), url('../img/about/about-bg2.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background: url('../img/about/about-bg.png') no-repeat center;
+  background-size: cover; 
 
   @media (max-width: 1000px) {
     padding: 35px 0 60px;
@@ -537,6 +534,7 @@ li {
   font-size: 50px;
   line-height: 108%;
   color: #171147;
+  font-weight: 700;
   &__red{
     color: #842774;
   }
