--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,92 @@
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background: #FFECFB;
+}
+#loader {
+  display: block;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #9370DB;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+#loader:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #BA55D3;
+  -webkit-animation: spin 3s linear infinite;
+  animation: spin 3s linear infinite;
+}
+#loader:after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #FF00FF;
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 1.5s linear infinite;
+}
+@-webkit-keyframes spin {
+  0%   {
+      -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+  }
+  100% {
+      -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+      transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0%   {
+      -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+  }
+  100% {
+      -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+      transform: rotate(360deg);
+  }
+}
+
+.preloader_hidden{
+  animation: preloaderhidden 3s linear forwards;
+  display: none;
+}
+@keyframes preloaderhidden {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
+// //////
 * {
   box-sizing: border-box;
   margin: 0;
@@ -590,7 +679,8 @@ li {
     } 
     &:hover{
       &::before{
-        right: 25px;
+
+        transform: translate(23px, -50%);
       }
     } 
 }
@@ -786,4 +876,203 @@ li {
 }
 .popup-active{
   display: flex;
+}
+
+.scroll-up {
+  position: fixed;
+  display: none;
+  bottom: 25px;
+  right: 20px;
+  &__img {
+    height: 62px;
+    width: 62px;
+  }
+}
+
+.scroll-up-active{
+  animation: scroll 0.4s ease;
+  display: inline-block;
+}
+@keyframes scroll {
+  0% {
+    transform: translateY(87px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+
+
+
+//////////////////FOOTER////////////////////////
+/// 
+/// 
+
+.footer {
+  background: url('../img/footer/footer-bg.png') center no-repeat;
+  background-size: cover;
+  padding: 63px 0 0;
+  &__row {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-bottom: 25px;
+    @media (max-width: 968px) {
+      flex-wrap: wrap;
+    }
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
+  }
+
+  &__coll {
+    max-width: 326px;
+    margin-right: 20px;
+    &:last-child{
+      margin-right: 0;
+    }
+    @media (max-width: 968px) {
+      flex: 0 1 50%;
+      margin-right: 0;
+      margin-bottom: 20px;
+      
+    }
+    @media (max-width: 768px) {
+      
+    }
+  }
+
+  &__logo {
+  display: inline-block;
+
+  font-size: 40px;
+  line-height: 47px;
+  color: #FFFFFF;
+  font-weight: 700;
+  
+  margin-bottom: 33px;
+  }
+
+  &__text {
+  font-size: 18px;
+  line-height: 133%;
+  color: #FFFFFF;
+  font-weight: 600;
+  }
+
+  &__list {
+  }
+
+  &__list-title{
+    font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: #FFFFFF;
+  margin-bottom: 25px;
+  }
+
+  &__item {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  margin-top: 10px;
+  }
+
+  &__link {
+    color: #FFFFFF;
+    font-weight: 400;
+    &:hover{
+      color: #E6E6E6;
+    }
+  }
+
+  &__icon{
+    display: inline-block;
+    margin-right: 5px;
+    vertical-align: middle;
+    svg{
+      vertical-align: middle;
+      fill: #fff;
+    }
+  }
+
+  &__item-link{
+  font-size: 18px;
+  line-height: 133%;
+  color: #FFFFFF;
+  &:hover{
+    color: #E6E6E6;
+    svg {
+      fill: #E6E6E6;
+    }
+  }
+  }
+
+  &__list-icons {
+    padding: 20px 0 0;
+    display: flex;
+    align-items: center;
+  }
+
+  &__item-icon {
+    margin-right: 15px;
+  }
+
+  &__link-icon{
+    display: inline-block;
+  }
+
+  &__link-icon{
+    svg{
+      fill: #E6E6E6;
+    }
+    &:hover{
+      svg{
+        fill: #fff;
+      }
+      
+    }
+  }
+
+  &__help{
+    padding: 15px 0;
+    border-top: 1px solid #FFFFFF;
+    transform: rotate(0.15deg);
+  }
+}
+
+.help {
+
+  &__list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+  }
+
+  &__item {
+    padding: 5px 30px;
+    @media (max-width: 900px) {
+      padding: 5px 15px;
+    }
+    @media (max-width: 768px) {
+      flex: 0 1 33.3%;
+
+    }
+    @media (max-width: 480px) {
+      flex: 0 1 50%;
+    }
+  }
+
+  &__link {
+    font-size: 16px;
+    line-height: 188%;
+    color: #FFFFFF;
+    &:hover{
+      color: #E6E6E6;
+    }
+  }
 }
