--- a/style/style.scss
+++ b/style/style.scss
@@ -326,7 +326,7 @@ li {
 
   &.header-fixed{
     animation: header 300ms ease;
-    padding: 14px;
+    padding: 5px;
     border-bottom: 2px solid #bd00f136;
     position: fixed;
     background-color: #eaa1fe;
@@ -624,7 +624,7 @@ li {
         left: 0;
         
         height: 2px;
-        width: 290px;
+        width: 100%;
         transform: rotate(-0.74deg);
         background: linear-gradient(268.82deg, #2E2594 0%, #F73B6C 97.99%);
       }
@@ -646,6 +646,9 @@ li {
   }
   @media (max-width: 1000px) {
     font-size: 44px ;
+  }
+  @media (max-width: 768px) {
+    font-size: 35px ;
   }
 }
 .btn-arrow {
@@ -717,7 +720,7 @@ li {
         right: 0;
 
         height: 2px;
-        width: 210px;
+        width: 100%;
         transform: rotate(-0.74deg);
         background: linear-gradient(268.82deg, #2E2594 0%, #F73B6C 97.99%);
       }
@@ -903,6 +906,149 @@ li {
   }
 }
 
+//////////////////Testimonial////////////////////////
+/// 
+/// 
+.testimonial {
+  background: url('../img/testimonial/testimonial-bg.png') center no-repeat;
+  background-size: cover;
+
+  padding: 90px 0 120px;
+  &__text-wrapper {
+    text-align: center;
+    width: fit-content;
+    margin: 0 auto 40px;
+  }
+
+  &__swiper{
+    padding-bottom: 60px;
+  }
+
+  &__suptitle {
+  }
+
+  &__title {
+    position: relative;
+    &::before{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+
+        height: 2px;
+        width: 100%;
+        background: linear-gradient(268.82deg, #2E2594 0%, #F73B6C 97.99%);
+      }
+  }
+
+  &__title--red {
+    color: #B53071!important;
+      
+  }
+
+  &__slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__content-img {
+    min-width: 350px;
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+
+  &__slide-content {
+    max-width: 588px;
+    padding-left: 40px;
+    @media (max-width: 768px) {
+      padding-left: 0;
+    }
+  }
+
+  &__stars-wrapper {
+  }
+
+  &__slide-text {
+  margin-top: 30px;
+
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 125%;
+  color: #332B5C;
+
+  @media (max-width: 968px) {
+    font-size: 20px;
+  }
+  }
+
+  &__permission {
+  font-size: 24px;
+  line-height: 125%;
+  color: #B53071;
+  font-weight: 700;
+
+  margin-top: 65px;
+  @media (max-width: 968px) {
+    font-size: 20px;
+    margin-top: 35px;
+  }
+  }
+
+  &__gamer {
+  background: linear-gradient(181.4deg, #2E2594 -10.1%, #F73B6C 255.25%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  font-weight: 600;
+  font-size: 16px;
+  @media (max-width: 968px) {
+    font-size: 14px;
+  }
+  }
+
+  .swiper-pagination{
+    transform: translateX(0)!important;
+    margin: 0 auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: static;
+  }
+  .swiper-pagination-bullet{
+    background: #FFFFFF;
+
+    height: 16px;
+    width: 16px;
+
+    transform: scale(1);
+    opacity: 1;
+  }
+  .swiper-pagination-bullet-active{
+    height: 24px;
+    width: 24px;
+
+    background:  #B53071;
+  }
+
+}
+
+.container {
+}
+.suptitle {
+}
+.modify-title {
+}
+.testimonial-swiper {
+}
+.swiper-wrapper {
+}
+.swiper-slide {
+}
 
 
 
@@ -1076,3 +1222,4 @@ li {
     }
   }
 }
+
